<resources>
    <string name="app_name">Try1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">explore</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="Upload">Upload</string>
    <string name="ShortcutHistory">Shortcut History</string>
    <string name="Explore" />
    <string name="explore1">Explore</string>
    <string name="Delete">Delete</string>
    <string name="Action">Action</string>
    <string name="Name">Name</string>
    <string name="Save">Save</string>
    <string name="message">Message from server.....</string>
    <string name="select">Select</string>
    <string name="accessibility_service_description">description</string>
    <string name="food">food</string>
    <string name="download">Download</string>
    <string name="ExploreVideos">Explore Videos</string>
    <string name="videoname">Video Name</string>
    <string name="va">Video Address</string>
    <string name="actions">Actions</string>
    <string name="ss">Screen Size</string>
</resources>